--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
+
 <script src="https://cdn.jsdelivr.net/gh/netizenorg/netnet-standard-library/build/nn.min.js"></script>
-<body></body>
+<style> 
+  html{
+ background-image: url("https://i.pinimg.com/736x/6a/21/ce/6a21ce8e32e9092a923324f0f31fee98.jpg");
+  background-size: cover;
+   background-attachment: fixed;
+    background-position: center;
+     background-repeat: no-repeat;
+}
+</style>
+
+<body>
+<img src="Adobe Express - file (6).png" alt="description of image"width=200 class='homeless cat'>
+</body>
+
 <script>
 /* global nn */
 function draw () {    
