--- a/index.html
+++ b/index.html
@@ -41,12 +41,19 @@
     font-size: 32px;
     cursor: pointer;
   }
+  .image-container{
+    
+  }
 </style>
 
 <body>
   <img src="Adobe Express - file (6).png" alt="description of image" width="200" class="homelesscat">
-  <img src="Adobe Express - file (7).png" alt="description of image" width="300" class="speechbubble">
   
+  <div class="image-container">
+  <img src="Adobe Express - file (7).png" alt="description of image" width="300" class="speechbubble">
+  <div class="image-text">I currently don't have a home, can you build me a house using the materials I collected?</div>
+  </div>
+    
   <div class="emoji-picker">
     <span>🌸</span>
     <span>🪨</span>
