--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   }
   
   .homelesscat {
-    position: absolute;
+    position: fixed;
     bottom: 40px;
     right: 50px;
   }
@@ -31,16 +31,23 @@
   
 
   .emoji-stamp {
-    position: absolute;
     font-size: 32px;
     cursor: pointer;
   }
   .speechbubble{
-      position: absolute;
+      position: fixed;
       bottom: 90px;
       right: 90px;
     } 
-  
+   #undo-button {
+      position: fixed;
+      top: 10px;
+      left: 200px;
+      z-index: 1000;
+      padding: 10px;
+      background: rgb(255, 203, 0);
+      border: dotted;
+    }
 </style>
 
 <body>
@@ -57,7 +64,7 @@
     <span>💧</span>
   </div>
   
-  <button id="undo-button" style="position: fixed; top: 5px; left: 200px; z-index: 999; padding: 10px;">Undo</button>
+  <button id="undo-button">Undo</button>
 
   <div id="drawing-area" style="position: relative; width: 100%; height: 100vh; background-color: transparent;"></div>
  
@@ -67,11 +74,12 @@
   const emojiPicker = document.querySelector('.emoji-picker');
   const drawingArea = document.getElementById('drawing-area');
   const undoButton = document.getElementById('undo-button');
+  const emojiStamps = []; 
   
   let currentEmoji = null;
   let isDrawing = false;
 
-  // Set up event listeners for emoji picker
+  
   emojiPicker.addEventListener('click', (e) => {
     if (e.target.tagName === 'SPAN') {
       currentEmoji = e.target.textContent;
@@ -99,15 +107,15 @@
     }
   });
 
-  // Function to place the emoji stamp at the current mouse position
-  function placeEmoji(e) {
+  
+    function placeEmoji(e) {
     const emojiStamp = document.createElement('div');
     emojiStamp.classList.add('emoji-stamp');
     emojiStamp.textContent = currentEmoji;
     
-    // Position the emoji at the mouse location
-    emojiStamp.style.left = `${e.pageX - 16}px`;  // 
-    emojiStamp.style.top = `${e.pageY - 16}px`;   // 
+    
+    emojiStamp.style.left = `${e.pageX - 16}px`;  
+    emojiStamp.style.top = `${e.pageY - 16}px`;   
     emojiStamp.style.position = 'absolute';
 
     drawingArea.appendChild(emojiStamp);
